--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: python-django-formtools
 Section: python
 Priority: optional
-Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
-Uploaders: Thomas Goirand <zigo@debian.org>,
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
+XSBC-Pexip-Original-Uploaders: Thomas Goirand <zigo@debian.org>,
 Build-Depends: debhelper (>= 9),
                dh-python,
                python-all,
@@ -18,6 +19,7 @@ Standards-Version: 3.9.6
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-django-formtools.git
 Vcs-Git: git://anonscm.debian.org/openstack/python-django-formtools.git
 Homepage: http://django-formtools.readthedocs.org/en/latest/
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: python-django-formtools
 Architecture: all
