--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,23 @@
 [tox]
 args_are_paths = false
-envlist = {py27,py32,py33,py34}-django-{17,18,master}
+envlist =
+    {py27,py34}-django-{18,19,110,master}
+    py33-django-{18}
+    py35-django-{18,19,110,master}
 
 [testenv]
 basepython =
     py27: python2.7
-    py32: python3.2
     py33: python3.3
     py34: python3.4
+    py35: python3.5
 usedevelop = true
 whitelist_externals = make
 commands = make test
 pip_pre = true
 deps =
-    django-17: Django>=1.7,<1.8
-    django-18: Django<1.9
+    django-18: Django>=1.8,<1.9
+    django-19: Django>=1.9,<1.10
+    django-110: Django>=1.10a1,<1.11
     django-master: https://github.com/django/django/archive/master.tar.gz
     -r{toxinidir}/tests/requirements.txt
