--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,46 @@
 language: python
 env:
-  matrix:
-    - TOXENV=py27-django-18
-    - TOXENV=py27-django-19
-    - TOXENV=py27-django-110
-    - TOXENV=py27-django-master
-    - TOXENV=py33-django-18
-    - TOXENV=py34-django-18
-    - TOXENV=py34-django-19
-    - TOXENV=py34-django-110
-    - TOXENV=py34-django-master
   global:
     - PIP_WHEEL_DIR=$HOME/.wheels
     - PIP_FIND_LINKS=file://$HOME/.wheels
-# https://github.com/travis-ci/travis-ci/issues/4794
 matrix:
   include:
+    - python: 3.4
+      env: TOXENV=py34-django-111
+    - python: 3.4
+      env: TOXENV=py34-django-20
     - python: 3.5
-      env: TOXENV=py35-django-18
+      env: TOXENV=py35-django-111
     - python: 3.5
-      env: TOXENV=py35-django-19
+      env: TOXENV=py35-django-20
     - python: 3.5
-      env: TOXENV=py35-django-110
+      env: TOXENV=py35-django-21
     - python: 3.5
-      env: TOXENV=py35-django-master
+      env: TOXENV=py35-django-22
+    - python: 3.6
+      env: TOXENV=py36-django-111
+    - python: 3.6
+      env: TOXENV=py36-django-20
+    - python: 3.6
+      env: TOXENV=py36-django-21
+    - python: 3.6
+      env: TOXENV=py36-django-22
+    - python: 3.6
+      env: TOXENV=py36-django-30
+    - python: 3.6
+      env: TOXENV=py36-django-master
+    - python: 3.7
+      env: TOXENV=py37-django-111
+    - python: 3.7
+      env: TOXENV=py37-django-20
+    - python: 3.7
+      env: TOXENV=py37-django-21
+    - python: 3.7
+      env: TOXENV=py37-django-22
+    - python: 3.7
+      env: TOXENV=py37-django-30
+    - python: 3.7
+      env: TOXENV=py37-django-master
 install:
     - mkdir -p $PIP_WHEEL_DIR
     - pip wheel -r tests/requirements.txt tox coveralls
