--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,25 @@
 [tox]
 args_are_paths = false
 envlist =
-    {py27,py34}-django-{18,19,110,master}
-    py33-django-{18}
-    py35-django-{18,19,110,master}
+    py34-django-{111,20}
+    {py35,py36,py37}-django-{111,20,21,22}
+    {py36,py37}-django-{30,master}
 
 [testenv]
 basepython =
-    py27: python2.7
-    py33: python3.3
     py34: python3.4
     py35: python3.5
+    py36: python3.6
+    py37: python3.7
 usedevelop = true
 whitelist_externals = make
 commands = make test
 pip_pre = true
 deps =
-    django-18: Django>=1.8,<1.9
-    django-19: Django>=1.9,<1.10
-    django-110: Django>=1.10a1,<1.11
+    django-111: Django>=1.11a1,<2.0
+    django-20: Django>=2.0a1,<2.1
+    django-21: Django>=2.1a1,<2.2
+    django-22: Django>=2.2a1,<3.0
+    django-30: Django>=3.0a1,<3.1
     django-master: https://github.com/django/django/archive/master.tar.gz
     -r{toxinidir}/tests/requirements.txt
