--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,28 @@
 [tox]
 args_are_paths = false
 envlist =
-    py34-django-{111,20}
-    {py35,py36,py37}-django-{111,20,21,22}
-    {py36,py37}-django-{30,master}
+    py{36,37,38,39}-django{22,31,32}
+    py{38,39}-djangomain
 
 [testenv]
-basepython =
-    py34: python3.4
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
 usedevelop = true
-whitelist_externals = make
+allowlist_externals = make
 commands = make test
 pip_pre = true
 deps =
-    django-111: Django>=1.11a1,<2.0
-    django-20: Django>=2.0a1,<2.1
-    django-21: Django>=2.1a1,<2.2
-    django-22: Django>=2.2a1,<3.0
-    django-30: Django>=3.0a1,<3.1
-    django-master: https://github.com/django/django/archive/master.tar.gz
+    django22: Django>=2.2,<3.0
+    django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<4.0
+    djangomain: https://github.com/django/django/archive/main.tar.gz
     -r{toxinidir}/tests/requirements.txt
+ignore_outcome =
+    djmain: True
+ignore_errors =
+    djmain: True
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
